--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-side-nav></app-side-nav>
-
-<router-outlet></router-outlet>
+<main id="body-container">
+  <nav>
+    <app-nav-bar></app-nav-bar>
+  </nav>
+  <aside>
+    <app-side-nav></app-side-nav>
+  </aside>
+</main>
