Bookmark view pane completed, API changes for Title fetch, Minimal Style changes

--- a/frontend/src/app/bmarker/bmarker.component.html
+++ b/frontend/src/app/bmarker/bmarker.component.html
@@ -1,4 +1,4 @@
-<main id="body-container">
+<!-- <main id="body-container">
   <nav>
     <app-nav-bar></app-nav-bar>
   </nav>
@@ -17,4 +17,4 @@
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
-</main>
+</main> -->
