--- a/frontend/src/app/folder-structure/folder-structure.component.html
+++ b/frontend/src/app/folder-structure/folder-structure.component.html
@@ -3,8 +3,8 @@
   selectionMode="single"
   [(selection)]="selectedFolder"
   [contextMenu]="options"
-  [draggableNodes]="true"
-  [droppableNodes]="true"
+  [draggableNodes]="false"
+  [droppableNodes]="false"
   draggableScope="self"
   droppableScope="self"
   (onNodeSelect)="onFolderClick($event)"
