--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <div class="nav-bar">
-  <img src="../../assets/logo.png" alt="BmarkerLogo" />
+  <h1 style="color: #1c558e" [routerLink]="['/']">Bmarker</h1>
   <div class="search-bookmarks">
     <!-- <fa name="search"></fa> -->
     <!-- <input type="text" name="Search" id="search-bookmark" /> -->
