--- a/frontend/src/app/side-nav/side-nav.component.html
+++ b/frontend/src/app/side-nav/side-nav.component.html
@@ -40,8 +40,8 @@
   <button
     pButton
     type="button"
-    class="ui-button-raised ui-button-rounded"
-    label="Bookmark"
+    class="ui-button-raised"
+    label="Add Bookmark"
     icon="pi pi-bookmark"
     (click)="addBookmark()"
   ></button>
