--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,12 +2,12 @@
   <nav>
     <app-nav-bar></app-nav-bar>
   </nav>
-  <mat-sidenav-container class="example-container">
+  <mat-sidenav-container class="bmaker-container">
     <mat-sidenav
       #sidenav
       mode="side"
       opened
-      class="example-sidenav"
+      class="bmarker-sidenav"
       [fixedInViewport]="true"
       [fixedTopGap]="50"
     >
