--- a/frontend/src/app/folder-structure/folder-structure.component.html
+++ b/frontend/src/app/folder-structure/folder-structure.component.html
@@ -26,7 +26,7 @@
       pButton
       type="button"
       [label]="footerSuccessBtn"
-      (click)="onSuccessBtnClick()"
+      (click)="onConfirmBtnClick()"
     ></button>
     <button
       pButton
