signup and login page added

--- a/frontend/src/app/bmarker/bmarker.component.html
+++ b/frontend/src/app/bmarker/bmarker.component.html
@@ -1,13 +1,13 @@
-<!-- <main id="body-container">
+<main id="body-container">
   <nav>
     <app-nav-bar></app-nav-bar>
   </nav>
-  <mat-sidenav-container class="example-container">
+  <mat-sidenav-container class="bmaker-container">
     <mat-sidenav
       #sidenav
       mode="side"
       opened
-      class="example-sidenav"
+      class="bmarker-sidenav"
       [fixedInViewport]="true"
       [fixedTopGap]="50"
     >
@@ -17,4 +17,4 @@
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
-</main> -->
+</main>
