--- a/frontend/src/app/bmarker/bmarker.component.html
+++ b/frontend/src/app/bmarker/bmarker.component.html
@@ -11,7 +11,27 @@
       <app-side-nav></app-side-nav>
     </mat-sidenav>
     <mat-sidenav-content>
-      <router-outlet name="view"></router-outlet>
+      <router-outlet></router-outlet>
+      <!-- <app-view-bmarks-pane></app-view-bmarks-pane> -->
     </mat-sidenav-content>
   </mat-sidenav-container>
+  -
 </div>
+
+<!--
+<mat-sidenav-container fullscreen>
+  <mat-sidenav mode="side" opened [style.width.px]="280" [style.z-index]="1">
+    <app-side-nav></app-side-nav>
+  </mat-sidenav>
+  <mat-sidenav-content class="bgc-white-4">
+    <div layout="row" layout-align="center start" class="pad-top-xl">
+      <div
+        layout="column"
+        tdMediaToggle="gt-md"
+        class="pad-top-md doc-layout pad-left-md pad-right-md"
+      >
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container> -->
