--- a/frontend/src/app/bmarker/bmarker.component.scss
+++ b/frontend/src/app/bmarker/bmarker.component.scss
@@ -13,3 +13,13 @@
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
     0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
+
+.doc-layout {
+  position: relative;
+  max-width: 936px;
+  width: 100%;
+}
+
+.doc-layout-gt-md {
+  padding-right: 88px;
+}
