--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -3,29 +3,45 @@
     <h2>SIGN UP</h2>
     <p>to manage your cluttered bookmarks at one place</p>
   </div>
-  <form id="signup-form" #signup="ngForm">
+  <form id="signup-form" [formGroup]="signupForm" (ngSubmit)="signupUser()">
     <div class="ui-fluid p-grid">
       <div class="p-field p-col-12 p-md-6">
         <label for="firstname">FirstName</label>
         <input
           id="firstname"
           type="text"
-          name="fname"
+          formControlName="firstName"
           autocomplete="off"
           pInputText
-          ngModel
         />
+        <span
+          class="text-danger"
+          *ngIf="
+            (signupFormControl.firstName.touched || submitted) &&
+            signupFormControl.firstName.errors?.required
+          "
+        >
+          First Name is required
+        </span>
       </div>
       <div class="p-field p-col-12 p-md-6">
         <label for="lastname">LastName</label>
         <input
           id="lastname"
           type="text"
-          name="lname"
+          formControlName="lastName"
           autocomplete="off"
           pInputText
-          ngModel
         />
+        <span
+          class="text-danger"
+          *ngIf="
+            (signupFormControl.lastName.touched || submitted) &&
+            signupFormControl.lastName.errors?.required
+          "
+        >
+          Last Name is required
+        </span>
       </div>
       <div class="p-field p-col-12 p-md-12">
         <label for="email">Email</label>
@@ -34,9 +50,27 @@
           type="email"
           name="email"
           autocomplete="off"
+          formControlName="email"
           pInputText
-          ngModel
         />
+        <span
+          class="text-danger"
+          *ngIf="
+            (signupFormControl.email.touched || submitted) &&
+            signupFormControl.email.errors?.required
+          "
+        >
+          Email is required
+        </span>
+        <span
+          class="text-danger"
+          *ngIf="
+            signupFormControl.email.touched &&
+            signupFormControl.email.errors?.email
+          "
+        >
+          Enter a valid email address
+        </span>
       </div>
       <div class="p-field p-col-12 p-md-6">
         <div class="p-field">
@@ -46,32 +80,67 @@
             type="password"
             name="password"
             autocomplete="off"
-            pInputText
-            ngModel
+            formControlName="password"
+            pPassword
           />
+          <span
+            class="text-danger"
+            *ngIf="
+              (signupFormControl.password.touched || submitted) &&
+              signupFormControl.password.errors?.required
+            "
+          >
+            Password is required
+          </span>
+          <span
+            class="text-danger"
+            *ngIf="
+              signupFormControl.password.touched &&
+              signupFormControl.password.errors?.invalidPassword
+            "
+          >
+            Password should have minimum 8 characters, at least 1 uppercase
+            letter, 1 lowercase letter and 1 number
+          </span>
         </div>
         <div class="p-field">
-          <label for="cpassword">Confirm Password</label>
+          <label for="confirmPassword">Confirm Password</label>
           <input
-            id="cpassword"
+            id="confirmPassword"
             type="password"
-            name="cpassword"
+            name="confirmPassword"
             autocomplete="off"
+            formControlName="confirmPassword"
             pInputText
-            ngModel
           />
+          <span
+            class="text-danger"
+            *ngIf="
+              (signupFormControl.confirmPassword.touched || submitted) &&
+              signupFormControl.confirmPassword.errors?.required
+            "
+          >
+            Confirm Password is required
+          </span>
+          <span
+            class="text-danger"
+            *ngIf="
+              signupFormControl.confirmPassword.touched &&
+              signupFormControl.confirmPassword.errors?.passwordMismatch
+            "
+          >
+            Passwords does not match
+          </span>
         </div>
       </div>
     </div>
     <div class="signup-btn">
       <button
-        pButton
-        type="button"
+        type="submit"
         label="Sign Up"
         class="ui-button-raised"
-        (click)="signupUser(signup.value)"
+        pButton
       ></button>
     </div>
   </form>
 </div>
-{{ signup.value | json }}
