--- a/frontend/src/app/signup/signup.component.scss
+++ b/frontend/src/app/signup/signup.component.scss
@@ -10,4 +10,9 @@
   #signup-context {
     flex: 50%;
   }
+
+  .invalid-field {
+    border-color: #d9534f;
+    box-shadow: 0 0 0 0.2em #ffaeae;
+  }
 }
