--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -3,7 +3,11 @@
     <h2>SIGN IN</h2>
     <p>to view your organized bookmarks</p>
   </div>
-  <form id="signin-form" [formGroup]="loginForm" (ngSubmit)="loginUser()">
+  <form
+    id="signin-form"
+    [formGroup]="loginForm"
+    (ngSubmit)="loginForm.valid && loginUser()"
+  >
     <div class="ui-fluid">
       <div class="p-field p-col-12 p-md-5">
         <label for="email">Email</label>
@@ -15,24 +19,6 @@
           formControlName="email"
           pInputText
         />
-        <span
-          class="text-danger"
-          *ngIf="
-            (loginFormControl.email.touched || submitted) &&
-            loginFormControl.email.errors?.required
-          "
-        >
-          Email is required
-        </span>
-        <span
-          class="text-danger"
-          *ngIf="
-            loginFormControl.email.touched &&
-            loginFormControl.email.errors?.email
-          "
-        >
-          Enter a valid email address
-        </span>
       </div>
       <div class="p-field p-col-12 p-md-5">
         <label for="password">Password</label>
@@ -43,25 +29,6 @@
           formControlName="password"
           pInputText
         />
-        <span
-          class="text-danger"
-          *ngIf="
-            (loginFormControl.password.touched || submitted) &&
-            loginFormControl.password.errors?.required
-          "
-        >
-          Password is required
-        </span>
-        <span
-          class="text-danger"
-          *ngIf="
-            loginFormControl.password.touched &&
-            loginFormControl.password.errors?.invalidPassword
-          "
-        >
-          Password should have minimum 8 characters, at least 1 uppercase
-          letter, 1 lowercase letter and 1 number
-        </span>
       </div>
     </div>
     <div class="signin-btn">
@@ -74,3 +41,4 @@
     </div>
   </form>
 </div>
+<p-toast [preventOpenDuplicates]="true" position="bottom-center"></p-toast>
