Bmarker restructuring 🔧 components and routing 🔨

--- a/frontend/src/app/bmarker/bmarker.component.html
+++ b/frontend/src/app/bmarker/bmarker.component.html
@@ -1,4 +1,4 @@
-<div id="body-container">
+<!-- <div id="body-container">
   <mat-sidenav-container class="bmaker-container">
     <mat-sidenav
       #sidenav
@@ -12,11 +12,11 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <router-outlet></router-outlet>
-      <!-- <app-view-bmarks-pane></app-view-bmarks-pane> -->
+      <!-- <app-view-bmarks-pane></app-view-bmarks-pane>
     </mat-sidenav-content>
   </mat-sidenav-container>
   -
-</div>
+</div> -->
 
 <!--
 <mat-sidenav-container fullscreen>
@@ -35,3 +35,4 @@
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container> -->
+<router-outlet></router-outlet>
