--- a/frontend/src/app/bmarker/bookmark-pane/bookmark-pane.component.html
+++ b/frontend/src/app/bmarker/bookmark-pane/bookmark-pane.component.html
@@ -8,7 +8,7 @@
       [fixedInViewport]="true"
       [fixedTopGap]="50"
     >
-      <router-outlet></router-outlet>
+      <app-side-nav></app-side-nav>
     </mat-sidenav>
     <mat-sidenav-content>
       <router-outlet></router-outlet>
