✅ Folder Route Navigation in Bookmark view pane ✅ URL addition view refresh fix

--- a/frontend/src/app/bmarker/side-nav/side-nav.component.html
+++ b/frontend/src/app/bmarker/side-nav/side-nav.component.html
@@ -46,5 +46,5 @@
     (click)="addBookmark()"
   ></button>
   <p-toast position="top-center" key="tc"></p-toast>
-  <app-folder-structure></app-folder-structure>
+  <app-folder-structure [newUrl]="urlNode"></app-folder-structure>
 </div>
