--- a/frontend/src/app/bmarker/view-bmarks-pane/view-bmarks-pane.component.html
+++ b/frontend/src/app/bmarker/view-bmarks-pane/view-bmarks-pane.component.html
@@ -8,6 +8,7 @@
           icon="pi pi-folder"
           iconPos="left"
           class="folder-box"
+          (click)="navigateFolder(folder)"
         ></p-button>
       </ng-container>
     </div>
