--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -8,6 +8,7 @@
   <div class="account-settings">
     <p-overlayPanel #op>
       <ng-template pTemplate>
+        <!-- <div class="account">Account Settings</div> -->
         <button
           pButton
           type="button"
@@ -24,6 +25,5 @@
       (click)="op.toggle($event)"
       pButton
     ></button>
-
   </div>
 </div>
