UI enhancements version-1 edits➕

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,8 @@
-<nav>
-  <app-nav-bar></app-nav-bar>
-</nav>
-<router-outlet></router-outlet>
+<div id="bmarker">
+  <nav>
+    <app-nav-bar></app-nav-bar>
+  </nav>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
