--- a/frontend/src/app/bmarker/bookmark-pane/bookmark-pane.component.html
+++ b/frontend/src/app/bmarker/bookmark-pane/bookmark-pane.component.html
@@ -1,5 +1,5 @@
 <div id="body-container">
-  <mat-sidenav-container class="bmaker-container">
+  <mat-sidenav-container class="bmarker-container">
     <mat-sidenav
       #sidenav
       mode="side"
