--- a/frontend/src/app/bmarker/folder-structure/folder-structure.component.scss
+++ b/frontend/src/app/bmarker/folder-structure/folder-structure.component.scss
@@ -4,6 +4,7 @@
       border: none;
       padding: 0;
       margin: 16px 0;
+      width: inherit;
 
       .ui-tree-container {
         .ui-treenode {
