--- a/frontend/src/app/bmarker/view-bmarks-pane/view-bmarks-pane.component.scss
+++ b/frontend/src/app/bmarker/view-bmarks-pane/view-bmarks-pane.component.scss
@@ -1,3 +1,10 @@
+.show-bmarks {
+  // margin-left: 30px;
+  // margin-bottom: 40px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
 #folder-container {
   display: flex;
   flex-direction: row;
@@ -20,5 +27,25 @@
       padding: 8px;
       border: 1px solid royalblue;
     }
+  }
+}
+
+.url-card {
+  text-decoration: none;
+  height: 100px;
+  width: 250px;
+  margin: 16px;
+  border-radius: 6px;
+  padding: 16px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  cursor: pointer;
+  #header,
+  #url-address {
+    width: -webkit-fill-available;
+    margin-bottom: 16px;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis !important;
   }
 }
