--- a/frontend/src/app/nav-bar/nav-bar.component.scss
+++ b/frontend/src/app/nav-bar/nav-bar.component.scss
@@ -1,23 +1,61 @@
-.nav-bar {
-  position: relative;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 16px;
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
-  z-index: 1002;
-  .search-bookmarks {
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+
+// .nav-bar {
+//   position: relative;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   height: 48px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   padding: 0 16px;
+//   // box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+//   //   0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+//   z-index: 1002;
+//   .search-bookmarks {
+//   }
+
+//   #account-icon {
+//     border: 1px solid #3498db;
+//     border-radius: 50%;
+//     padding: 5px;
+//     color: #3498db;
+//   }
+// }
+
+#nav-bar {
+  background-color: #fff;
+  border-radius: 8px;
+  min-height: 50px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  h1 {
+    font-family: "Pacifico", cursive;
+    cursor: pointer;
+    color: #007ad9;
+    letter-spacing: 1px;
   }
 
-  #account-icon {
-    border: 1px solid #3498db;
+  .mat-toolbar-row,
+  .mat-toolbar-single-row {
+    height: 50px;
+  }
+
+  .account-setting {
+    background-color: #007ad9;
+    height: 40px;
+    width: 40px;
+    color: #fff;
+    font-weight: bold;
     border-radius: 50%;
-    padding: 5px;
-    color: #3498db;
+  }
+
+  .example-icon {
+    padding: 0 14px;
+  }
+
+  .example-spacer {
+    flex: 1 1 auto;
   }
 }
