--- a/frontend/src/app/nav-bar/nav-bar.component.scss
+++ b/frontend/src/app/nav-bar/nav-bar.component.scss
@@ -26,7 +26,7 @@
 
 #nav-bar {
   background-color: #fff;
-  border-radius: 8px;
+  // border-radius: 8px;
   min-height: 50px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
