--- a/frontend/src/app/bmarker/bookmark-pane/bookmark-pane.component.scss
+++ b/frontend/src/app/bmarker/bookmark-pane/bookmark-pane.component.scss
@@ -1,15 +1,39 @@
-.bmarker-container {
-  width: 100%;
-  margin: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
+#body-container {
+  height: 100%;
+  display: flex;
 
-.bmarker-sidenav {
-  width: 250px;
-  // border: 1px solid #555;
-  border-radius: 6px;
-  // margin: 8px;
-  // box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  .side-nav {
+    min-width: 250px;
+    border-radius: 4px;
+    margin: 8px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+      rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  }
+  .main-pane {
+    width: 100%;
+    border-radius: 4px;
+    margin: 8px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+      rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  }
+
+  // .bmarker-container {
+  //   // position: absolute;
+  //   // width: 100%;
+  //   // height: 100%;
+  //   margin: 8px;
+  //   border: 1px solid rgba(0, 0, 0, 0.5);
+  //   .bmarker-sidenav {
+  //     // position: relative;
+  //     width: 250px;
+  //     border-radius: 6px;
+  //     margin: 8px;
+  //     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+  //       rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  //   }
+
+  //   mat-sidenav-content {
+  //     border: 1px solid red;
+  //   }
+  // }
 }
