--- a/frontend/src/app/bmarker/view-bmarks-pane/view-bmarks-pane.component.scss
+++ b/frontend/src/app/bmarker/view-bmarks-pane/view-bmarks-pane.component.scss
@@ -1,51 +1,49 @@
 .show-bmarks {
-  // margin-left: 30px;
-  // margin-bottom: 40px;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-}
+  margin: 16px;
+  // box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+  //   rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 
-#folder-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  #folders {
+    margin: 0 16px;
+    #folder-container {
+      margin: 16px 0;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
 
-  .folder-box {
-    margin: 0 16px 16px 0;
-  }
-}
-
-#links-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-:host {
-  ::ng-deep {
-    .ui-card {
-      padding: 8px;
-      border: 1px solid royalblue;
+      .folder-box {
+        margin: 0 16px 16px 0;
+      }
     }
   }
-}
 
-.url-card {
-  text-decoration: none;
-  height: 100px;
-  width: 250px;
-  margin: 16px;
-  border-radius: 6px;
-  padding: 16px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  cursor: pointer;
-  #header,
-  #url-address {
-    width: -webkit-fill-available;
-    margin-bottom: 16px;
-    display: inline-block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis !important;
+  #links {
+    margin: 0 16px;
+    #links-container {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+
+      .url-card {
+        text-decoration: none;
+        height: 100px;
+        width: 250px;
+        margin: 16px 16px 16px 0;
+        border-radius: 6px;
+        padding: 16px;
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+          rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+        cursor: pointer;
+        #header,
+        #url-address {
+          width: -webkit-fill-available;
+          margin-bottom: 16px;
+          display: inline-block;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis !important;
+        }
+      }
+    }
   }
 }
