Login UI change to card layout & restructured Bmarker module

--- a/frontend/src/app/bmarker/bmarker.component.html
+++ b/frontend/src/app/bmarker/bmarker.component.html
@@ -35,4 +35,18 @@
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container> -->
-<router-outlet></router-outlet>
+<div id="bmarker">
+  <nav>
+    <app-nav-bar></app-nav-bar>
+  </nav>
+  <main>
+    <div id="body-container">
+      <div class="side-nav">
+        <app-side-nav></app-side-nav>
+      </div>
+      <div class="main-pane">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </main>
+</div>
