--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="bmarker">
-  <nav>
+  <!-- <nav>
     <app-nav-bar></app-nav-bar>
-  </nav>
+  </nav> -->
   <main>
     <router-outlet></router-outlet>
   </main>
