--- a/frontend/src/app/bmarker/bmarker.component.scss
+++ b/frontend/src/app/bmarker/bmarker.component.scss
@@ -1,25 +1,34 @@
-#body-container {
+#bmarker {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  top: 48px;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  height: 100vh;
+}
+nav {
+  margin-bottom: 8px;
 }
 
-.bmarker-sidenav {
-  // border: 1px solid rebeccapurple;
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
-}
+main {
+  overflow: hidden;
+  flex-grow: 1;
 
-.doc-layout {
-  position: relative;
-  max-width: 936px;
-  width: 100%;
-}
+  #body-container {
+    height: 100%;
+    display: flex;
 
-.doc-layout-gt-md {
-  padding-right: 88px;
+    .side-nav {
+      min-width: 250px;
+      border-radius: 4px;
+      margin: 8px;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    }
+    .main-pane {
+      width: 100%;
+      border-radius: 4px;
+      margin: 8px;
+      overflow-y: scroll;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    }
+  }
 }
