--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,16 +1,15 @@
-<div class="signin">
-  <div id="signin-context">
-    <h2>SIGN IN</h2>
-    <p>to view your organized bookmarks</p>
-  </div>
-  <form
-    id="signin-form"
-    [formGroup]="loginForm"
-    (ngSubmit)="loginForm.valid && loginUser()"
-  >
-    <div class="ui-fluid">
-      <div class="p-field p-col-12 p-md-5">
-        <label for="email">Email</label>
+<div id="login-container">
+  <!-- <div class="login-bg-card"></div> -->
+  <div class="login-card">
+    <h1 id="app-heading">Bmarker</h1>
+    <h2 id="login-header">Log in.</h2>
+    <form
+      id="login-form"
+      [formGroup]="loginForm"
+      (ngSubmit)="loginForm.valid && loginUser()"
+    >
+      <div class="login-field">
+        <label for="email">Email Address</label>
         <input
           id="email"
           type="email"
@@ -20,7 +19,7 @@
           pInputText
         />
       </div>
-      <div class="p-field p-col-12 p-md-5">
+      <div class="login-field">
         <label for="password">Password</label>
         <input
           id="password"
@@ -30,15 +29,19 @@
           pInputText
         />
       </div>
-    </div>
-    <div class="signin-btn">
-      <button
-        pButton
-        type="submit"
-        label="Sign In"
-        class="ui-button-raised"
-      ></button>
-    </div>
-  </form>
+      <div id="signin-btn">
+        <button
+          pButton
+          type="submit"
+          label="Log In"
+          class="ui-button-raised"
+        ></button>
+      </div>
+      <div id="signup-text">
+        <h5>Don't have and Account ? <span>Sign up</span></h5>
+      </div>
+    </form>
+    <div class="triangle"></div>
+  </div>
 </div>
 <p-toast [preventOpenDuplicates]="true" position="bottom-center"></p-toast>
