UI enhancements Main page

--- a/frontend/src/app/bmarker/folder-structure/folder-structure.component.scss
+++ b/frontend/src/app/bmarker/folder-structure/folder-structure.component.scss
@@ -8,8 +8,13 @@
 
       .ui-tree-container {
         .ui-treenode {
-          .ui-treenode-content:focus {
-            box-shadow: none;
+          .ui-treenode-content {
+            &:focus {
+              box-shadow: none;
+            }
+            .ui-treenode-label.ui-state-highlight {
+              background-color: var(--bmarker-primary-color);
+            }
           }
         }
       }
