--- a/frontend/src/app/bmarker/view-bmarks-pane/view-bmarks-pane.component.scss
+++ b/frontend/src/app/bmarker/view-bmarks-pane/view-bmarks-pane.component.scss
@@ -11,8 +11,19 @@
       flex-direction: row;
       flex-wrap: wrap;
 
-      .folder-box {
+      .bmk-folder {
+        display: inline-flex;
+        align-items: center;
         margin: 0 16px 16px 0;
+        width: 180px;
+        height: 56px;
+        background: #fff;
+        border: 1px solid #bbc0c6;
+        border-radius: 10px;
+        cursor: pointer;
+        i.pi.pi-folder {
+          margin: 14px;
+        }
       }
     }
   }
@@ -20,6 +31,7 @@
   #links {
     margin: 0 16px;
     #links-container {
+      margin: 16px 0;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
@@ -45,5 +57,13 @@
         }
       }
     }
+  }
+
+  h2 {
+    color: var(--bmarker-secondary-color);
+  }
+  .empty-text {
+    font-size: 14px;
+    color: var(--bmarker-secondary-color);
   }
 }
