--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -13,10 +13,10 @@
       margin: 24px 0;
       h1 {
         font-family: "Pacifico", cursive;
-        color: #5456ff;
+        color: var(--bmarker-primary-color);
       }
       h4 {
-        color: #3f3d56;
+        color: var(--bmarker-secondary-color);
       }
     }
 
@@ -35,7 +35,7 @@
       margin: 24px 0;
       h1 {
         text-align: left;
-        color: #3f3d56;
+        color: var(--bmarker-secondary-color);
       }
     }
     .login-field {
@@ -46,7 +46,7 @@
         margin-bottom: 1rem;
       }
       label {
-        color: #3f3d56;
+        color: var(--bmarker-secondary-color);
         font-size: 13px;
         font-weight: bold;
       }
@@ -54,14 +54,14 @@
     #signin-btn {
       margin-bottom: 16px;
       button {
-        background-color: #5456ff;
-        border: 1px solid #5456ff;
+        background-color: var(--bmarker-primary-color);
+        border: 1px solid var(--bmarker-primary-color);
       }
     }
     #signup-text {
-      color: #3f3d56;
+      color: var(--bmarker-secondary-color);
       a {
-        color: #5456ff;
+        color: var(--bmarker-primary-color);
       }
     }
   }
